syntax="proto3";

package model;

option go_package = "./model";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string full_name = 2;
  string email = 3;
  repeated string hobbies = 4;
  google.protobuf.Timestamp created_time = 5;
}

message UserList {
  repeated User list = 1;
}

service UserService {
  rpc Fetch(google.protobuf.Empty) returns (UserList) {}
}
